LIBFCREPO-1211: Updating oai_repo library temporarily
I have made a pull request into the master branch for the oai_repo
library and until that gets merged and a new version is created,
I'm using my fork of the library with the changes to the valid_date
method in the OAIRepository class.

Currently as is, if you try following the steps for setting up the
virtual environment, it will fail unless you install these into your
environment before running pip install -r requirements.test.txt -e .

lxml
requests
validators
jsonpath-ng

https://umd-dit.atlassian.net/browse/LIBFCREPO-1211

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ jsonpath-ng==1.5.3
 jwcrypto==1.4.2
 lxml==4.9.2
 MarkupSafe==2.1.2
-oai-repo==0.3.4
+oai-repo @ git+https://github.com/aguilarm-umd/oai_repo.git@a412de331c48d0ae2168b835a970698d3caa1bfb
 ply==3.11
 pycparser==2.21
 pysolr==3.9.0
