LIBFCREPO-1556: Replacing HTTPBearerAuth with JWTSecretAuth
So that the server can generate it's own token
Also updated the pyproject to the package from PYPI instead of git

https://umd-dit.atlassian.net/browse/LIBFCREPO-1556

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "python-dotenv",
     "PyYAML",
     "requests",
-    "requests-jwtauth@git+https://github.com/umd-lib/requests-jwtauth.git@1.0.0",
+    "requests-jwtauth",
     "waitress",
     "Sickle"
 ]
